updated JS to connect buttons, working on updating screen effectively.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <h3>A simple style calculator using HTML/CSS/JS</h3>
 
     <div id="container">
-        <div id="display">
-            <p id="displayText"></p>
+        <div id="disHolder">
+            <div id ="disHistory">
+                <p id="disHistorytxt"></p>
+            </div>
+            <div id="display">
+              <p id="displayText"></p>
+            </div>
         </div>
         <div id="label">
             <p>CHRISIO &trade; </p>
@@ -20,32 +25,32 @@
         <div id="buttons">
             <div id="buttonsLine1">
                 <button class ="button" id="AC">AC</button>
-                <button class ="button" id="Backspace"><</button>
-                <button class ="button" id="%">%</button>
-                <button class ="button" id="/">/</button>
+                <button class ="button" id="Bac"><</button>
+                <button class ="button" id="per">%</button>
+                <button class ="button" id="div">/</button>
             </div>
             <div id="buttonsLine2">
                 <button class ="button" id="sev">7</button>
                 <button class ="button" id="eig">8</button>
                 <button class ="button" id="nin">9</button>
-                <button class ="button" id="*">*</button>
+                <button class ="button" id="mul">*</button>
             </div>
             <div id="buttonsLine3">
-                <button class ="button" id="4">4</button>
-                <button class ="button" id="5">5</button>
-                <button class ="button" id="6">6</button>
-                <button class ="button" id="-">-</button> 
+                <button class ="button" id="fou">4</button>
+                <button class ="button" id="fiv">5</button>
+                <button class ="button" id="six">6</button>
+                <button class ="button" id="min">-</button> 
             </div>
             <div id="buttonsLine4">
-                <button class ="button" id="1">1</button>
-                <button class ="button" id="2">2</button>
-                <button class ="button" id="3">3</button>
-                <button class ="button" id="+">+</button>
+                <button class ="button" id="one">1</button>
+                <button class ="button" id="two">2</button>
+                <button class ="button" id="thr">3</button>
+                <button class ="button" id="plu">+</button>
             </div>
             <div id="buttonsLine5">
-                <button class ="button" id="0">0</button>
-                <button class ="button" id=".">.</button>
-                <button class ="button" id="equal">=</button>
+                <button class ="button" id="zer">0</button>
+                <button class ="button" id="dot">.</button>
+                <button class ="button" id="equ">=</button>
             </div>
         </div>
     </div>
