updated operand, need to update further.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="container">
         <div id="disHolder">
             <div id ="disHistory">
-                <p id="disHistorytxt"></p>
+                <p id="disOperand"></p>
             </div>
             <div id="display">
               <p id="displayText"></p>
